--- a/styles/inicio.css
+++ b/styles/inicio.css
@@ -101,3 +101,7 @@ text-align: center;
     line-height: 1.6;
     color: #ffffff;
 }
+
+.icono {
+    filter: invert(100%) brightness(0%) contrast(100%);
+}
