--- a/styles/main.css
+++ b/styles/main.css
@@ -69,7 +69,7 @@
     border-radius: 5px;
     list-style-type: none;
     background-color: #0e3422;
-    height: 100vh;
+    height: inherit;
 }
 
 .menu #logo {
@@ -153,7 +153,7 @@
     border-radius: 5px;
 }
 
-.contenido h1 {
+.contenido #titulo h1 {
     font-family: "Roboto Slab";
     font-weight: 400;
     border-bottom: 1px solid white;
@@ -217,6 +217,10 @@
     margin-top: 1.2em;
 }
 
+.sidebar li:last-child {
+    margin-top: 5em;
+}
+
 .sidebar a {
     color: white;
     font-weight: bold;
@@ -232,7 +236,7 @@
 
 .sidebar h3 {
     margin-top: 1.8em;
-    font-size: 1.2em;
+    font-size: 0.9em;
     font-weight: bold;
     font-family: "Roboto Serif";
     text-align: center;
@@ -240,8 +244,9 @@
 }
 
 .sidebar p {
-    font-size: 1.1em;
+    font-size: 1em;
     margin-top: 0.8em;
+    text-align: center;
 }
 
 .sidebar p {
