--- a/styles/main.css
+++ b/styles/main.css
@@ -48,6 +48,18 @@
     box-sizing: border-box;
 }
 
+html, body {
+    width: 100%;
+    height: 100%;
+    overflow-x: hidden;
+}
+
+body {
+    overflow-y: scroll;
+    scrollbar-width: thin;
+    scrollbar-color: #0E3422 #12382633;
+}
+
 /* Elemento padre contenedor de todos los demás elementos */
 .contenedor {
     display: flex;
@@ -258,6 +270,21 @@
 .sidebar p {
     line-height: 1.6;
     color: #ffffff;
+}
+
+.pie-pagina {
+    background-color: #0e3422;
+    /* Ajusta este color para que coincida con tu esquema de colores */
+    color: #ffffff;
+    /* Ajusta este color para que coincida con tu esquema de colores */
+    padding: 20px 0;
+    text-align: center;
+    font-size: 14px;
+    font-family: 'Roboto', sans-serif;
+    /* Asegúrate de que esta fuente coincida con la del resto del sitio */
+    margin-top: 30px;
+    border-top: 3px solid #030d08;
+    /* Ajusta este color para que coincida con tu esquema de colores */
 }
 
 /* - - - - MEDIA QUERIES - - - - */
