--- a/styles/mediciones.css
+++ b/styles/mediciones.css
@@ -1,7 +1,3 @@
-body {
-  text-align: center;
-}
-
 .container {
     display: flex;
     justify-content: space-between;
@@ -18,6 +14,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
+    text-align: center;
 }
 
 .carta h3 {
@@ -32,17 +29,13 @@ body {
     margin: 10px 0;
 }
 
-.estadisticas {
+.subtitulo {
   margin-top: 100px;
 }
 
-h2 {
-  margin-top: 50px;
-}
-
 canvas {
-  max-width: 600px; /* Ancho máximo */
-  max-height: 200px; /* Alto máximo */
+  max-width: 600px;
+  max-height: 200px;
   margin: 10px auto;
   display: block;
 }
